Add swagger for /admin/post routes Move showPosts() from postController to pageController and its route Define a middleware to check resultValidation in post routes Fix bug in handling error in post functions
